Fixed font size on mobile and added fade

--- a/style.css
+++ b/style.css
@@ -25,28 +25,34 @@ html,body {
 }
 
 #center-wrapper{
-    display: inline-block;
-    width: 70%;
+    padding-left: 10vw;
+    padding-right: 10vw;
     height: 70%;
     vertical-align: middle;
     text-align: left;
 }
 
-.name{
-    font-size: 4vw;
+#center-wrapper h1{
+    font-size: 60px;
     font-weight:500;
-    line-height: 0.6;
+    line-height: 0.9;
 }
 
 .nickname{
-    font-size: 2vw;
+    font-size: 25px;
     font-weight: 100;
 }
 
 .workat{
-    font-size: 2vw;
+    font-size: 30px;
     padding-top: 5vh;
     font-weight: 300;
+}
+
+.bio{
+    padding-top: 10px;
+    font-size: 15px;
+    font-weight: 200;
 }
 
 #footer-wrapper{
@@ -56,6 +62,8 @@ html,body {
 .font-shadow{
     text-shadow: 0px 1px 2px rgba(0,0,0,0.4);
 }
+
+/* Particles */
 
 .container  {
     width:100%;
